--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "autoload": {
     "psr-4": {
       "Quadrogod\\Abc\\Pages\\": "src/",
-      "Quadrogod\\Abc\\Pages\\Database\\Seeders\\": "database/seeders/"
+      "Quadrogod\\Abc\\Pages\\Database\\Seeders\\": "database/seeders/",
+      "Quadrogod\\Abc\\Pages\\Database\\Factories\\": "database/factories/"
     }
   },
   "require": {
